--- a/locales/fr/home.json
+++ b/locales/fr/home.json
@@ -2,12 +2,12 @@
     "header_nav_aboutme" : "À PROPOS",
     "header_nav_mywork" : "PROJETS",
     "contact" : "CONTACT",
-    "about_me_paragraph" : "EST UN DÉVELOPPEUR WEB QUI ASPIRE À CRÉER DES INTERFACES INNOVANTES GRÂCE À DES INTERACTIONS ET ANIMATIONS COMPLEXES. ACTUELLEMENT À LA RECHERCHE D'UNE ALTERNANCE EN DÉVELOPPEMENT WEB (3 SEMAINES/1 SEMAINE)",    
+    "about_me_paragraph" : "EST UN DÉVELOPPEUR WEB PASSIONNÉ PAR LES INTERFACES INNOVANTES ET LES ANIMATIONS COMPLEXES. ACTUELLEMENT À LA RECHERCHE D'UNE ALTERNANCE EN DÉVELOPPEMENT WEB.",    
     "more":"PLUS",
     "resume":"C.V",
-    "sprite-generator_fr" : "Sprite generator est un programme PHP qui permet à l'utilisateur de créer un sprite à partir de plusieurs images et donc de réduire le nombre de requêtes pour charger les images d'un site internet. Interface utilisateur réalisée en CLI interatif avec php.",
-    "snapchat_fr" : "Ce projet est un clone de l'application snapchat réalisé avec une API interne qui gère toute la partie Back. Cette application est totalement fonctionnelle et vous permet de vous enregistrer sur le service et donc d'envoyer et recevoir des photos des autres utilisateurs.",
-    "irc_fr" : "Service de messagerie en ligne avec channels et messagerie privée réalisée avec Node.js/Express et React.js pour le front (socket.io).",
+    "sprite-generator_fr" : "Sprite generator est un programme PHP qui permet à l'utilisateur de générer un template sprite à partir de plusieurs images et donc de réduire le nombre de requêtes pour charger les images d'un site internet. Interface réalisée en CLI interatif avec PHP.",
+    "snapchat_fr" : "Ce projet est un clone de l'application Snapchat réalisé avec une API qui gère toute la partie Back. Cette application est totalement fonctionnelle et vous permet de vous enregistrer sur le service et donc d'envoyer et recevoir des photos des autres utilisateurs.",
+    "irc_fr" : "Service de messagerie en ligne avec channels et messagerie privée réalisée avec Node.js/Express et Socket.io pour le back ainsi que React.js pour le Front.",
     "spotify_fr" : "Application en ligne pour découvrir la discographie de certains artistes et écouter leurs morceaux. Réalisé en React avec une API Symfony pour le back.",
     "cinema_fr": "Site de gestion des membres et clients d'un cinéma réalisé en PHP pour le back et Vanilla JS en front."
 }
