--- a/locales/fr/home.json
+++ b/locales/fr/home.json
@@ -9,5 +9,7 @@
     "mtn-snaps_fr" : "Ce projet est un clone de l'application Snapchat réalisé avec une API qui gère toute la partie Back. Cette application est totalement fonctionnelle et vous permet de vous enregistrer sur le service et donc d'envoyer et recevoir des photos des autres utilisateurs.",
     "ocr_fr" : "Service de messagerie en ligne avec channels et messagerie privée réalisée avec Node.js/Express et Socket.io pour le back ainsi que React.js pour le Front.",
     "spotitech_fr" : "Application en ligne pour découvrir la discographie de certains artistes et écouter leurs morceaux. Réalisé en React avec une API Symfony pour le back.",
-    "cinema_fr": "Site de gestion des membres et clients d'un cinéma réalisé en PHP pour le back et Vanilla JS en front."
+    "cinema_fr": "Site de gestion des membres et clients d'un cinéma réalisé en PHP pour le back et Vanilla JS en front.",
+    "battle_fr": "Le jeu de la bataille corse fait en JavaScript.",
+    "portfolio_fr" : "Ce même site que vous êtes en train de visiter ! Réalisé avec NEXT.js. Son code source est disponible sur mon github."
 }
